Moved CSI vars out of default/main.yml

--- a/tasks/09_install_democratic_csi_iscsi.yml
+++ b/tasks/09_install_democratic_csi_iscsi.yml
@@ -9,7 +9,7 @@
   block:
   - name: Install iSCSI Support packages
     apt:
-      name: "{{install.democratic_csi.iscsi.packages}}"
+      name: "{{democratic_csi.iscsi.packages}}"
       state: present
 
   - name: Copy multipath.Conf File
