--- a/tasks/09_install_democratic_csi_nfs.yml
+++ b/tasks/09_install_democratic_csi_nfs.yml
@@ -9,7 +9,7 @@
   block:
   - name: Install NFS Support packages
     apt:
-      name: "{{install.democratic_csi.nfs.packages}}"
+      name: "{{democratic_csi.nfs.packages}}"
       state: present
 
   - name: Add democratic-csi Repository to Helm
