--- a/vars/democratic-csi.yml
+++ b/vars/democratic-csi.yml
@@ -27,3 +27,15 @@ democratic_csi:
 
   # Define the name of the TrueNAS NFS hostname key stored in truenas_api_secrets.yml
   nfs_hostname:  "{{TN_NFS_HOST|default(' NOT_SET_IN__truenas_api_secrets.yml')}}"
+
+  iscsi:
+    packages:
+    - open-iscsi
+    - lsscsi
+    - sg3-utils
+    - multipath-tools
+    - scsitools
+
+  nfs:
+    packages:
+    - libnfs-utils
