--- a/vars/longhorn.yml
+++ b/vars/longhorn.yml
@@ -4,6 +4,9 @@ longhorn:
   repo_url: "https://charts.longhorn.io"
   repo_chart_ref: "longhorn/longhorn"
 
+  packages:
+    - open-iscsi
+
   zfs:
     # Format of the filesystem used for Longhorn storage
     zvol:
