Grafana Dashboard initial commit

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -317,8 +317,16 @@ install:
         allowed_users: "{{prometheus_operator.prometheus.dashboard_users}}"
 
     grafana:
+
       storage_claim:                  # Define where and how data is stored
         access_mode: "ReadWriteOnce"
         class_name: "freenas-iscsi-csi"
         claim_size: 10Gi
 
+      dashboard:
+        create_route: true           # Create Ingress Route to make accessible 
+        enable_basic_auth: false   # Has its own login page
+
+        # Default Dashboard URL:  https://k3s.{{ansible_domain}}/prometheus/
+        hostname: "k3s.{{ansible_domain}}"    # Domain for ingress route
+        path: "/grafana"           # URI Path for Ingress Route
