--- a/vars/prometheus-op.yml
+++ b/vars/prometheus-op.yml
@@ -6,3 +6,6 @@ prometheus_operator:
 
   prometheus:
     dashboard_users: "{{PROMETHEUS_DASHBOARD_USERS}}"
+
+  alertmanager:
+    dashboard_users: "{{ALERTMANAGER_DASHBOARD_USERS}}"
