--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -330,3 +330,21 @@ install:
         # Default Dashboard URL:  https://k3s.{{ansible_domain}}/prometheus/
         hostname: "k3s.{{ansible_domain}}"    # Domain for ingress route
         path: "/grafana"           # URI Path for Ingress Route
+
+    alertmanager:
+      storage_claim:                  # Define where and how data is stored
+        access_mode: "ReadWriteOnce"
+        class_name: "freenas-iscsi-csi"
+        claim_size: 5Gi
+
+      # Alert Manager Dashboard
+      dashboard:
+        create_route: true           # Create Ingress Route to make accessible 
+        enable_basic_auth: true   # Has its own login page
+
+        # Default Dashboard URL:  https://k3s.{{ansible_domain}}/prometheus/
+        hostname: "k3s.{{ansible_domain}}"    # Domain for ingress route
+        path: "/alertmanager"           # URI Path for Ingress Route
+
+        # Encoded users and passwords for basic authentication
+        allowed_users: "{{prometheus_operator.alertmanager.dashboard_users}}"
