--- a/vars/prometheus-op.yml
+++ b/vars/prometheus-op.yml
@@ -9,3 +9,6 @@ prometheus_operator:
 
   alertmanager:
     dashboard_users: "{{ALERTMANAGER_DASHBOARD_USERS}}"
+  
+    receivers: "{{ALERTMANAGER_RECEIVERS}}"
+  
