--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -348,3 +348,32 @@ install:
 
         # Encoded users and passwords for basic authentication
         allowed_users: "{{prometheus_operator.alertmanager.dashboard_users}}"
+      
+      # Configuration Values for Helm for Alert Configurations
+      # Reference: https://prometheus.io/docs/alerting/latest/configuration/
+      helm_config_values: |
+        config:
+          global:
+            resolve_timeout: 5m
+          route:
+            receiver: default-receiver
+            group_wait: 30s
+            group_interval: 5m
+            repeat_interval: 4h
+            group_by: [cluster, alertname]
+            # All alerts that do not match the following child routes
+            # will remain at the root node and be dispatched to 'default-receiver'.
+            #routes:
+            #  - matchers:
+            #    - service=~"foo1|foo2|baz"
+            #  receiver: database-team
+            routes:
+          receivers:
+          - name: 'default-receiver'
+            # https://prometheus.io/docs/alerting/latest/configuration/#slack_config
+            slack_configs:
+              - api_url: "{{vault_slack_config_api_url}}"
+                send_resolved: true
+                channel: 'monitoring'
+                {% raw %}text: "{{ range .Alerts }}<!channel> {{ .Annotations.summary }}\n{{ .Annotations.description }}\n{{ end }}"{% endraw %}
+
