--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -363,16 +363,16 @@ install:
             group_by: [cluster, alertname]
             # All alerts that do not match the following child routes
             # will remain at the root node and be dispatched to 'default-receiver'.
-            #routes:
+            routes:
             #  - matchers:
             #    - service=~"foo1|foo2|baz"
             #  receiver: database-team
-            routes:
           receivers:
           - name: 'default-receiver'
             # https://prometheus.io/docs/alerting/latest/configuration/#slack_config
             slack_configs:
               - api_url: "{{vault_slack_config_api_url}}"
+                icon_url: "https://github.com/kubernetes/kubernetes/blob/master/logo/logo.png"
                 send_resolved: true
                 channel: 'monitoring'
                 {% raw %}text: "{{ range .Alerts }}<!channel> {{ .Annotations.summary }}\n{{ .Annotations.description }}\n{{ end }}"{% endraw %}
