--- a/tasks/13_install_prometheus_op.yml
+++ b/tasks/13_install_prometheus_op.yml
@@ -11,6 +11,13 @@
       owner: "{{install.os.non_root_user.name}}"
       group: "{{install.os.non_root_user.name}}"
 
+  # K3s does not have control-plane in a pod, get IPs of nodes in control-plane
+  - name: Determine InternalIP's for ControlPlane nodes
+    command: >
+      kubectl get nodes --selector=node-role.kubernetes.io/control-plane=true
+      -o jsonpath='{.items[*].status.addresses[?(@.type=="InternalIP")].address}'
+    register: controlPlaneIPs
+
   - name: Copy Prometheus Template Files
     template:
       src: "templates/prometheus-op/{{item}}.j2"
@@ -26,6 +33,12 @@
       - traefik_clusterip.yaml
       - longhorn_servicemonitor.yaml
       - alertmanager_ingress_route.yaml
+
+  - name: Copy K3S config.yaml if not exist
+    copy:
+     src: "files/prometheus-op/k3s_config.yaml"
+     dest: "/etc/rancher/k3s/config.yaml"
+     force: "no"
 
   - name: Add Prometheus Operator to Helm
     kubernetes.core.helm_repository:
@@ -159,6 +172,7 @@
 
   when:
     - install.prometheus_operator.install_this|default(false)|bool == true
+    - inventory_hostname == groups['k3s_control'][0]
   tags:
     - install_prometheus_operator
     - never
