--- a/tasks/09_install_democratic_csi_iscsi.yml
+++ b/tasks/09_install_democratic_csi_iscsi.yml
@@ -103,8 +103,9 @@
       wait_sleep: 5
       wait_timeout: 120
 
-  tags:
-    - install_democratic_csi_iscsi
   when:
+    - inventory_hostname == groups['k3s_control'][0]
     - install.democratic_csi.iscsi.provisioner is defined
     - install.democratic_csi.iscsi.install_this|default(false)|bool == true
+  tags:
+    - install_democratic_csi_iscsi
